tests/e2e/macros/procedural/custom/v1_and_v2/snapshots/e2e__macros__procedural__custom__v1_and_v2__mixed_attribute_with_error.snap
---
source: tests/e2e/macros/procedural/custom/v1_and_v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros\" }\ncairols_test_macros_v2 = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\n#[error_attribute_macro]\nfn foo() {}\n\n#[error_attribute_macro_v2]\nfn bar() {}"
expression: report
---
[[expansions]]
analyzed_lines = """
#[error_attribute_macro]<caret>
fn f<caret>oo() {}
fn foo() {<caret>}
"""
generated_code = """
#[error_attribute_macro]
fn foo() {}
"""

[[expansions]]
analyzed_lines = """
#[error_attribute_macro_v2]<caret>
fn b<caret>ar() {}
fn bar() {<caret>}
"""
generated_code = """
#[error_attribute_macro_v2]
fn bar() {}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: '#[error_attribute_macro]'
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 0
          character: 24
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
  - related_code: '#[error_attribute_macro_v2]'
    diagnostic:
      range:
        start:
          line: 3
          character: 0
        end:
          line: 3
          character: 27
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
