tests/e2e/macros/procedural/custom/v1_and_v2/snapshots/e2e__macros__procedural__custom__v1_and_v2__mixed_inline_complex.snap
---
source: tests/e2e/macros/procedural/custom/v1_and_v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros = { path = \"/Users/timelock/swm/starkware/cairols/tests/scarb_procedural_macros\" }\ncairols_test_macros_v2 = { path = \"/Users/timelock/swm/starkware/cairols/tests/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\nfn foo() {\n    let _x = complex_inline_macro!(10 + 10);\n    let _y = complex_inline_macro_v2!(10 + 10);\n}"
expression: report
snapshot_kind: text
---
[[expansions]]
analyzed_lines = """
    let _x = complex<caret>_inline_macro!(10 + 10);
    let _x = complex_inline_macro!(10 +<caret> 10);
"""
generated_code = """
// lib.cairo
// ---------

simple_inline_macro!((10 + 10)) + simple_inline_macro!((10 + 10))
"""

[[expansions]]
analyzed_lines = """
    let _y = complex<caret>_inline_macro_v2!(10 + 10);
    let _y = complex_inline_macro_v2!(10 +<caret> 10);
"""
generated_code = """
// lib.cairo
// ---------

simple_inline_macro_v2!((10 + 10)) + simple_inline_macro_v2!((10 + 10))
"""
