tests/e2e/macros/procedural/custom/v1_and_v2/snapshots/e2e__macros__procedural__custom__v1_and_v2__mixed_inline_improper.snap
---
source: tests/e2e/macros/procedural/custom/v1_and_v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros\" }\ncairols_test_macros_v2 = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\nfn foo() {\n    let _x = improper_inline_macro!(10 + 10);\n}\n\nfn bar() {\n    let _y = improper_inline_macro_v2!(10 + 10);\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    let _x = improper<caret>_inline_macro!(10 + 10);
    let _x = improper_inline_macro!(10 +<caret> 10);
"""
generated_code = """
unbound_identifier
"""

[[expansions]]
analyzed_lines = """
    let _y = improper<caret>_inline_macro_v2!(10 + 10);
    let _y = improper_inline_macro_v2!(10 +<caret> 10);
"""
generated_code = """
{
    (10 + 10);
    unbound_identifier_v2
}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: improper_inline_macro!(10 + 10)
    diagnostic:
      range:
        start:
          line: 1
          character: 13
        end:
          line: 1
          character: 44
      severity: 1
      code: E0006
      message: Identifier not found.
      relatedInformation:
      - location:
          uri: vfs://inline_proc_macro.cairo
          range:
            start:
              line: 0
              character: 0
            end:
              line: 0
              character: 18
        message: Diagnostic mapped from here.
  - related_code: improper_inline_macro_v2!(10 + 10)
    diagnostic:
      range:
        start:
          line: 5
          character: 13
        end:
          line: 5
          character: 47
      severity: 1
      code: E0006
      message: Identifier not found.
      relatedInformation:
      - location:
          uri: vfs://inline_proc_macro.cairo
          range:
            start:
              line: 0
              character: 11
            end:
              line: 0
              character: 32
        message: Diagnostic mapped from here.
