tests/e2e/macros/procedural/custom/v1_and_v2/snapshots/e2e__macros__procedural__custom__v1_and_v2__mixed_inline_simple.snap
---
source: tests/e2e/macros/procedural/custom/v1_and_v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros\" }\ncairols_test_macros_v2 = { path = \"/Users/piotr/Projects/cairols/tests/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\nfn foo() {\n    let _x = simple_inline_macro!(10 + 10);\n    let _y = simple_inline_macro_v2!(10 + 10);\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    let _x = simple<caret>_inline_macro!(10 + 10);
    let _x = simple_inline_macro!(10 +<caret> 10);
"""
generated_code = """
9
"""

[[expansions]]
analyzed_lines = """
    let _y = simple<caret>_inline_macro_v2!(10 + 10);
    let _y = simple_inline_macro_v2!(10 +<caret> 10);
"""
generated_code = """
(10 + 10)
"""
