tests/e2e/macros/procedural/custom/v1_and_v2/snapshots/e2e__macros__procedural__custom__v1_and_v2__mixed_inline_with_error.snap
---
source: tests/e2e/macros/procedural/custom/v1_and_v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros = { path = \"/Users/timelock/swm/starkware/cairols/tests/scarb_procedural_macros\" }\ncairols_test_macros_v2 = { path = \"/Users/timelock/swm/starkware/cairols/tests/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\nfn foo() {\n    error_inline_macro!(10 + 10);\n    error_inline_macro_v2!(10 + 10);\n}"
expression: report
snapshot_kind: text
---
[[expansions]]
analyzed_lines = """
    error<caret>_inline_macro!(10 + 10);
    error_inline_macro!(10 +<caret> 10);
    error<caret>_inline_macro_v2!(10 + 10);
    error_inline_macro_v2!(10 +<caret> 10);
"""
generated_code = """
No expansion information.
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: error_inline_macro!(10 + 10)
    diagnostic:
      range:
        start:
          line: 1
          character: 4
        end:
          line: 1
          character: 32
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
  - related_code: error_inline_macro_v2!(10 + 10)
    diagnostic:
      range:
        start:
          line: 2
          character: 4
        end:
          line: 2
          character: 35
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
